--- a/index.html
+++ b/index.html
@@ -71,25 +71,6 @@
 
 
 
-    <div id="tag_modal" class="modal fade" tabindex="-1" roll="dialog" aria-labelledby="basicModal" aria-hidden="true">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismess="modal" aria-hidden="true"><span aria-hidden="true">&times;</span></button>
-              <h5 class="modal-title" id="mytitle"> Title</h5>
-          </div>
-            <!-- modal-header here -->
-            <div class="modal-body">
-              <p>
-                Body text
-              </p>
-            </div>
-        </div>
-          <!-- modal-content here -->
-      </div>
-      <!-- modal-dialog here -->
-    </div>
-     <!-- Div with Beta-id ends here -->
 
     <!-- Scripts go here. -->
 
@@ -107,6 +88,35 @@
             </div>
         </div>
     </script>
+
+
+  <script id="modal-template" type="text/x-handlebars-template">
+    <div id="note_modal" class="modal fade" tabindex="-1" roll="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismess="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+              <h5 class="modal-title" id="mytitle"> {{title}}</h5>
+          </div>
+            <!-- modal-header here -->
+            <div class="modal-body">
+              <p>
+                {{body}}
+              </p>
+            </div>
+        </div>
+          <!-- modal-content here -->
+      </div>
+      <!-- modal-dialog here -->
+    </div>
+     <!-- Div with tag_modal ends here -->
+  </script>
+
+
+
+
+
+
 
 
 
